name:                monad-examples
version:             0.1.0.0
synopsis:            Examples uses of monads
-- description:         
homepage:            github.com/phischu/monad-examples
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          phischu3000@googlemail.com
-- copyright:           
category:            Example
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable st-example
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.9,
                       vector >=0.11.0.0 && <0.12
  hs-source-dirs:      st-example
  default-language:    Haskell2010

executable stm-example
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.9,
                       stm >=2.4.4 && <2.5
  hs-source-dirs:      stm-example
  default-language:    Haskell2010

executable shake-example
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.9,
                       shake >=0.15.2 && <0.16
  hs-source-dirs:      shake-example
  default-language:    Haskell2010

executable resourcet-example
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.9,
                       resourcet >=1.1.6 && <1.2,
                       transformers >=0.3.0.0 && <0.4
  hs-source-dirs:      resourcet-example
  default-language:    Haskell2010

executable distribution-example
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.9,
                       probability >=0.2.5 && <0.3
  hs-source-dirs:      distribution-example
  default-language:    Haskell2010

executable pipe-example
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.9,
                       pipes >=4.1.6 && <4.2,
                       text >=1.2.1.3 && <1.3,
                       containers >=0.5.5.1 && <0.6
  hs-source-dirs:      pipe-example
  default-language:    Haskell2010

executable process-example
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.9,
                       distributed-process >=0.6.4 && <0.7,
                       distributed-process-simplelocalnet >=0.2.3.2 && <0.3
  hs-source-dirs:      process-example
  default-language:    Haskell2010

executable scotty-example
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.9,
                       scotty >=0.11.0 && <0.12,
                       text >=1.2.1.3 && <1.3
  hs-source-dirs:      scotty-example
  default-language:    Haskell2010

executable relation-example
  main-is:             Main.hs
  other-modules:       Person,
                       Pet
  build-depends:       base >=4.7 && <4.9,
                       relational-query >=0.8.3.0 && <0.9
  hs-source-dirs:      relation-example
  default-language:    Haskell2010

