name:                monad-examples
version:             0.1.0.0
synopsis:            Examples uses of monads
-- description:         
homepage:            github.com/phischu/monad-examples
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          phischu3000@googlemail.com
-- copyright:           
category:            Example
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:          shake-data/file1,
                     shake-data/file2,
                     shake-data/file3,
                     shake-data/filenames

executable st-example
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5.0,
                       vector >=0.11.0.0 && <0.13
  hs-source-dirs:      st-example
  default-language:    Haskell2010

executable stm-example
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5.0,
                       stm >=2.4.4 && <2.6
  hs-source-dirs:      stm-example
  default-language:    Haskell2010
  ghc-options:         -threaded

executable shake-example
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5.0,
                       shake >=0.15.2 && <0.17
  hs-source-dirs:      shake-example
  default-language:    Haskell2010

executable resourcet-example
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5.0,
                       resourcet >=1.1.6 && <1.3,
                       transformers >=0.3.0.0 && <0.6
  hs-source-dirs:      resourcet-example
  default-language:    Haskell2010

executable probability-example
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5.0,
                       probability >=0.2.5.1 && <0.3
  hs-source-dirs:      probability-example

executable pipe-example
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5.0,
                       pipes >=4.1.6 && <4.4,
                       text >=1.2.1.3 && <1.3,
                       containers >=0.5.5.1 && <0.6
  hs-source-dirs:      pipe-example
  default-language:    Haskell2010

executable process-example
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5.0
  build-depends:       distributed-process >=0.6.4 && <0.8,
                       distributed-process-simplelocalnet >=0.2.3.2 && <0.7,
                       distributed-static >=0.3.5 && <0.4,
                       binary >=0.7.5.0 && <0.9
  hs-source-dirs:      process-example

executable scotty-example
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5.0,
                       scotty >=0.11.0 && <0.12,
                       text >=1.2.1.3 && <1.3
  hs-source-dirs:      scotty-example
  default-language:    Haskell2010

executable relation-example
  main-is:             Main.hs
  other-modules:       Person,
                       Pet
  build-depends:       base >=4.7 && <5.0,
                       relational-query >=0.8.3.0 && <0.13
  hs-source-dirs:      relation-example
  default-language:    Haskell2010

executable logic-example
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5.0,
                       logict >=0.6.0.2 && <0.7
  hs-source-dirs:      logic-example
  default-language:    Haskell2010

executable spec-example
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5.0,
                       hspec >=2.2.3 && <2.6,
                       QuickCheck >=2.8.2 && <2.12
  hs-source-dirs:      spec-example
  default-language:    Haskell2010

executable parser-example
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5.0,
                       attoparsec >=0.13.0.1 && <0.14,
                       text >=1.2.1.3 && <1.3
  hs-source-dirs:      parser-example
  default-language:    Haskell2010

executable canvas-example
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5.0,
                       blank-canvas >=0.6 && <0.7
  hs-source-dirs:      canvas-example
  ghc-options:         -threaded
  default-language:    Haskell2010

